﻿Pre 12/07/2025: Changes not recorded

12/07/2025:
	Added label to display where in the song you are hovering over in the progress bar

13/07/2025:
	Added ListBox containing the current songs in the playlist, songs can be clicked on to play them
	Added tooltips
	Added stop button and volume controls, and the button control for looping, though without functionality yet

14/07/2025:
	Added forward and back buttons for playlists, and also made loading a song after having a playlist loaded clear the playlist
	Added drag and drop for files

15/07/2025:
	Added about window
	Added music note app icon